near support resistance filter with trading hour filter